feat(user): add flash message for users

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,9 @@
 		{% endblock %}
 	</head>
 	<body>
+		{# Todo: inclure le header #}
 		<main>
+			{% include 'Layout/_flash.html.twig' %}
 			{% block body %}{% endblock %}
 		</main>
 	</body>
