feat(user): add modification for users in admin

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
 		{% endblock %}
 	</head>
 	<body>
-		{# Todo: inclure le header #}
+		{# TODO: inclure le header #}
 		<main>
 			{% include 'Layout/_flash.html.twig' %}
 			{% block body %}{% endblock %}
