--- a/templates/Security/register.html.twig
+++ b/templates/Security/register.html.twig
@@ -9,7 +9,7 @@
 		<div class="container">
 			<h1>Inscription</h1>
 			<p>Créez-vous un compte pour commencer à faire votre collection de Sneakers</p>
-			{{ form_start(form, {attr:{class: 'card p-3 w-75 mx-auto'}}) }}
+			{{ form_start(form) }}
 			{{ form_widget(form) }}
 			<button class="btn" type="submit">S'inscrire</button>
 			{{ form_end(form) }}
