--- a/templates/Layout/_flash.html.twig
+++ b/templates/Layout/_flash.html.twig
@@ -1,23 +1,23 @@
 {% for flash in app.flashes('success') %}
-	<div>
+	<div class="alert alert-success" role="alert">
 		{{ flash }}
 	</div>
 {% endfor %}
 
 {% for flash in app.flashes('error') %}
-	<div>
+	<div class="alert alert-danger" role="alert">
 		{{ flash }}
 	</div>
 {% endfor %}
 
 {% for flash in app.flashes('info') %}
-	<div>
+	<div class="alert alert-info" role="alert">
 		{{ flash }}
 	</div>
 {% endfor %}
 
 {% for flash in app.flashes('warning') %}
-	<div>
+	<div class="alert alert-warning" role="alert">
 		{{ flash }}
 	</div>
 {% endfor %}
