--- a/templates/Frontend/Account/index.html.twig
+++ b/templates/Frontend/Account/index.html.twig
@@ -11,7 +11,10 @@
 			<p>{{ address.address }}</p>
 			<p>{{ address.ZipCode }}</p>
 			<p>{{ address.city }}</p>
-			<a href="">Modification</a>
+			<div>
+				<a href="{{ path('account.address.edit', {id: address.id}) }}">Modification</a>
+				{% include 'Frontend/Account/_deleteForm.html.twig' %}
+			</div>
 		{% endfor %}
 	</section>
 {% endblock %}
