feat(product): add delete

--- a/templates/Backend/Product/index.html.twig
+++ b/templates/Backend/Product/index.html.twig
@@ -16,7 +16,7 @@
 					<p>{{ product.enable ? 'Actif' : 'Inactif'}}</p>
 					<div>
 						<a href="{{ path('admin.products.edit', {id: product.id}) }}">Modifier</a>
-						{# TODO: _deleteForm.html.twig #}
+						{% include 'Backend/Product/_deleteForm.html.twig' %}
 					</div>
 				</div>
 			{% endfor %}
