--- a/templates/Backend/Gender/index.html.twig
+++ b/templates/Backend/Gender/index.html.twig
@@ -13,8 +13,8 @@
 					<h4>{{ gender.name }}</h4>
 					<p>{{ gender.enable ? 'Actif' : 'Inactif'}}</p>
 					<div>
-						{# <a href="{{ path('admin.genders.edit', {id: gender.id}) }}">Modifier</a>
-																								{% include 'Backend/Product/_deleteForm.html.twig' %} #}
+						<a href="{{ path('admin.genders.edit', {id: gender.id}) }}">Modifier</a>
+						{% include 'Backend/Gender/_deleteForm.html.twig' %}
 					</div>
 				</div>
 			{% endfor %}
