--- a/templates/Backend/Gender/index.html.twig
+++ b/templates/Backend/Gender/index.html.twig
@@ -7,6 +7,7 @@
 {% block body %}
 	<section>
 		<h1>Administration des genres</h1>
+		<a href="{{ path('admin.genders.create')}}" class="mt-2 btn btn-primary">Créer un gender</a>
 		<div>
 			{% for gender in genders %}
 				<div>
