--- a/templates/Backend/Model/index.html.twig
+++ b/templates/Backend/Model/index.html.twig
@@ -7,6 +7,7 @@
 {% block body %}
 	<section>
 		<h1>Administration des models</h1>
+		<a href="{{ path('admin.models.create')}}" class="mt-2 btn btn-primary">Créer un model</a>
 		<div>
 			{% for model in models %}
 				<div>
