feat(taxe): add read

--- a/templates/Backend/Taxe/index.html.twig
+++ b/templates/Backend/Taxe/index.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 	<section>
 		<h1>Administration des taxes</h1>
-		<a href="{{ path('admin.taxe.create')}}" class="mt-2 btn btn-primary">Créer une taxes</a>
+		<a href="{{ path('admin.taxe.create')}}" class="mt-2 btn btn-primary">Créer une taxe</a>
 		<div>
 			{% for taxe in taxes %}
 				<div>
