--- a/templates/Backend/Product/index.html.twig
+++ b/templates/Backend/Product/index.html.twig
@@ -17,6 +17,7 @@
 					<p>{{ product.enable ? 'Actif' : 'Inactif'}}</p>
 					<div>
 						<a href="{{ path('admin.products.edit', {id: product.id}) }}">Modifier</a>
+						<a href="{{ path('admin.productVariant.index', {id: product.id}) }}">Variante</a>
 						{% include 'Backend/Product/_deleteForm.html.twig' %}
 					</div>
 				</div>
