--- a/templates/Backend/Product/_editForm.html.twig
+++ b/templates/Backend/Product/_editForm.html.twig
@@ -1,4 +1,6 @@
 {{ form_start(form) }}
+{{ form_row(form.name) }}
+{% include 'Backend/Product/_productImage.html.twig' %}
 {{ form_widget(form) }}
 <button class="btn" type="submit">Modification</button>
 {{ form_end(form) }}
