feat(footer): modify style

--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -3,14 +3,26 @@
   background-color: $secondaryColor;
   color: $primaryColor;
   padding: 1rem 4rem;
+  margin-top: 3rem;
   font-size: 0.8rem;
 
   &__section {
     width: 15%;
+
     .icons {
       display: flex;
       flex-direction: row;
       gap: 1rem;
+    }
+
+    .contact {
+      @include flexbox($align: start, $direction: column);
+    }
+
+    .bi-envelope {
+      border: $primaryColor 1px solid;
+      border-radius: $border-radius;
+      padding: 0.4rem;
     }
   }
 }
