--- a/templates/Layout/_footer.html.twig
+++ b/templates/Layout/_footer.html.twig
@@ -1,7 +1,7 @@
 <footer class="footer">
 	<div class="footer__section">
 		<h4>Nous contacter</h4>
-		<div>
+		<div class="contact">
 			<i class="bi bi-envelope"></i>
 			<p>Portail de contact notre équipe s’engage à vousrépondre en 24 à 48h ouvrées.</p>
 		</div>
