--- a/templates/Security/register.html.twig
+++ b/templates/Security/register.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 	<section class="form">
-		<div class="container">
+		<div class="container-form">
 			<h1>Inscription</h1>
 			<p>Créez-vous un compte pour commencer à faire votre collection de Sneakers</p>
 			{{ form_start(form) }}
