--- a/templates/Backend/Gender/_deleteForm.html.twig
+++ b/templates/Backend/Gender/_deleteForm.html.twig
@@ -1,4 +1,4 @@
 <form action="{{ path('admin.genders.delete', {id: gender.id}) }}" method="post">
 	<input type="hidden" name="token" value="{{ csrf_token('delete' ~ gender.id) }}">
-	<button type="submit">Supprimer</button>
+	<button class="btn" type="submit">Supprimer</button>
 </form>
