--- a/templates/Backend/Marque/_deleteForm.html.twig
+++ b/templates/Backend/Marque/_deleteForm.html.twig
@@ -1,4 +1,4 @@
 <form action="{{ path('admin.marques.delete', {id: marque.id}) }}" method="post">
 	<input type="hidden" name="token" value="{{ csrf_token('delete' ~ marque.id) }}">
-	<button type="submit">Supprimer</button>
+	<button class="btn" type="submit">Supprimer</button>
 </form>
