--- a/templates/Backend/Model/_deleteForm.html.twig
+++ b/templates/Backend/Model/_deleteForm.html.twig
@@ -1,4 +1,4 @@
 <form action="{{ path('admin.models.delete', {id: model.id}) }}" method="post">
 	<input type="hidden" name="token" value="{{ csrf_token('delete' ~ model.id) }}">
-	<button type="submit">Supprimer</button>
+	<button class="btn" type="submit">Supprimer</button>
 </form>
