--- a/templates/Backend/Product/_deleteForm.html.twig
+++ b/templates/Backend/Product/_deleteForm.html.twig
@@ -1,4 +1,4 @@
 <form action="{{ path('admin.products.delete', {id: product.id}) }}" method="post">
 	<input type="hidden" name="token" value="{{ csrf_token('delete' ~ product.id) }}">
-	<button type="submit">Supprimer</button>
+	<button class="btn" type="submit">Supprimer</button>
 </form>
