--- a/templates/Backend/Product/create.html.twig
+++ b/templates/Backend/Product/create.html.twig
@@ -5,13 +5,15 @@
 {% endblock %}
 
 {% block body %}
-	<section class="container">
-		<h1>Création d'un produit</h1>
-		{{ form_start(form) }}
-		{{ form_row(form.name) }}
-		{% include 'Backend/Product/_productImage.html.twig' %}
-		{{ form_widget(form) }}
-		<button class="btn" type="submit">Ajouter un produit</button>
-		{{ form_end(form) }}
+	<section class="form">
+		<div class="container-form">
+			<h1>Création d'un produit</h1>
+			{{ form_start(form) }}
+			{{ form_row(form.name) }}
+			{% include 'Backend/Product/_productImage.html.twig' %}
+			{{ form_widget(form) }}
+			<button class="btn" type="submit">Ajouter un produit</button>
+			{{ form_end(form) }}
+		</div>
 	</section>
 {% endblock %}
