--- a/templates/Backend/Product/edit.html.twig
+++ b/templates/Backend/Product/edit.html.twig
@@ -5,9 +5,11 @@
 {% endblock %}
 
 {% block body %}
-	<section>
-		<h1>Modification d'un produit</h1>
-		{% include 'Backend/Product/_editForm.html.twig' %}
-		<a href="{{ path('admin.products.index') }}">Retour à la liste des produits</a>
+	<section class="form">
+		<div class="container-form">
+			<h1>Modification d'un produit</h1>
+			{% include 'Backend/Product/_editForm.html.twig' %}
+			<a href="{{ path('admin.products.index') }}">Retour à la liste des produits</a>
+		</div>
 	</section>
 {% endblock %}
