--- a/templates/Backend/Taxe/_deleteForm.html.twig
+++ b/templates/Backend/Taxe/_deleteForm.html.twig
@@ -1,4 +1,4 @@
 <form action="{{ path('admin.taxe.delete', {id: taxe.id}) }}" method="post">
 	<input type="hidden" name="token" value="{{ csrf_token('delete' ~ taxe.id) }}">
-	<button type="submit">Supprimer</button>
+	<button class="btn" type="submit">Supprimer</button>
 </form>
