--- a/templates/Backend/Taxe/create.html.twig
+++ b/templates/Backend/Taxe/create.html.twig
@@ -5,11 +5,13 @@
 {% endblock %}
 
 {% block body %}
-	<section class="container">
-		<h1>Création d'une taxe</h1>
-		{{ form_start(form) }}
-		{{ form_widget(form) }}
-		<button class="btn" type="submit">Ajouter une taxe</button>
-		{{ form_end(form) }}
+	<section class="form">
+		<div class="container-form">
+			<h1>Création d'une taxe</h1>
+			{{ form_start(form) }}
+			{{ form_widget(form) }}
+			<button class="btn" type="submit">Ajouter une taxe</button>
+			{{ form_end(form) }}
+		</div>
 	</section>
 {% endblock %}
