--- a/templates/Backend/Users/_deleteForm.html.twig
+++ b/templates/Backend/Users/_deleteForm.html.twig
@@ -1,4 +1,4 @@
 <form action="{{ path('admin.users.delete', {id: user.id}) }}" method="post">
 	<input type="hidden" name="token" value="{{ csrf_token('delete' ~ user.id) }}">
-	<button type="submit">Supprimer</button>
+	<button class="btn" type="submit">Supprimer</button>
 </form>
