--- a/templates/Frontend/Account/_deleteForm.html.twig
+++ b/templates/Frontend/Account/_deleteForm.html.twig
@@ -1,4 +1,4 @@
 <form action="{{ path('account.address.delete', {id: address.id}) }}" method="post">
 	<input type="hidden" name="token" value="{{ csrf_token('delete' ~ address.id) }}">
-	<button type="submit">Supprimer</button>
+	<button class="btn" type="submit">Supprimer</button>
 </form>
