--- a/templates/Layout/_header.html.twig
+++ b/templates/Layout/_header.html.twig
@@ -18,7 +18,7 @@
 		</div>
 		<ul class="nav__ul icon">
 			<li class="nav__li">
-				<a href="#">
+				<a href="{{ path('app.register') }}">
 					<i class="bi bi-person"></i>
 				</a>
 			</li>
