--- a/templates/Security/login.html.twig
+++ b/templates/Security/login.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 	<section class="form">
-		<div class="container">
+		<div class="container-form">
 			<h1>Connexion</h1>
 			<p>Entrez votre email et votre mot de passe pour continuer</p>
 			<form action="{{ path('app.login')}}" method="post">
