--- a/templates/Backend/Product/_productImage.html.twig
+++ b/templates/Backend/Product/_productImage.html.twig
@@ -4,5 +4,5 @@
 			<li>{{ form_widget(productImage) }}</li>
 		{% endfor %}
 	</ul>
-	<button class="btn" type="button" class="add_item_link" data-collection-holder-class="productImages">Add a Images</button>
+	<button type="button" class="add_item_link btn" data-collection-holder-class="productImages">Add a Images</button>
 </div>
