feat(frontend): product card

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -13,6 +13,7 @@
 // Import Components
 @import "components/form";
 @import "components/cardBack";
+@import "components/productCard";
 
 // Import Layout
 @import "layout/navbar";
