--- a/templates/Frontend/home/index.html.twig
+++ b/templates/Frontend/home/index.html.twig
@@ -14,10 +14,11 @@
 							<img src="{{ vich_uploader_asset(product|main_image)}}" alt="{{ product.name }}">
 						{% endif %}
 					</div>
-					<h3 class="card__name">{{ product.name }}</h3>
+					<h3 class="card__title">{{ product.name }}</h3>
 					<p>A partir de €</p>
 					<p>Marque</p>
-				{% endfor %}
-			</div>
-		</section>
-	{% endblock %}
+				</div>
+			{% endfor %}
+		</div>
+	</section>
+{% endblock %}
